# jusmundi_interview

./: .gitignore  README.md  generate_number.sh  pyproject.toml
infra/: docker-compose.yml
infra/metastore/conf/: metastore-site.xml
infra/metastore/scripts/: entrypoint.sh
infra/prometheus/: prometheus.yml
infra/spark/: Dockerfile  spark-default.conf  start-spark.sh
infra/telegraf/: telegraf.conf
infra/trinodb/conf/catalog/: lakehouse.properties
src/: main.py
src/commons/: constant.py  spark.py
src/extract/: extract.py
src/parser/: argument.py
src/transform/: transform.py
tests/transform/: test_transform.py
