[tool.poetry]
name = "jusmundi-interview"
version = "1.0.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.3"
statsd-telegraf = "^3.2.1.post1"
apimetrics = "^0.2.2"
statsd = "^4.0.1"
black = "^24.10.0"
pyproject-fmt = "^2.5.0"
venv-pack = "^0.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
